// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ontario-search-box > should prioritize slotted suggestions over getSuggestions 1`] = `
<ontario-search-box enable-autocomplete caption="Search cities" class="hydrated">
  <mock:shadow-root>
    <form name="searchForm" id="ontario-search-form-container" class="ontario-search__container ontario-columns ontario-small-10 ontario-medium-offset-3 ontario-medium-6 ontario-large-offset-0 ontario-large-6" novalidate>
      <label htmlfor="ontario-search-input-field" class="ontario-label">
        Search cities
      </label>
      <div class="ontario-search__input-suggestion-container">
        <div class="ontario-search__input-container">
          <input autocomplete="off" class="ontario-search__input ontario-input" id="ontario-search-input-field" name="search" type="search" role="combobox" value="to" required aria-controls="ontario-search-input-field-suggestion-list" aria-haspopup="listbox" aria-autocomplete="list" aria-expanded>
          <input class="ontario-search__reset" id="ontario-search-reset" type="reset" value aria-label="Clear field">
          <button class="ontario-search__submit" type="submit" id="ontario-search-box__submit">
            <span class="ontario-show-for-sr">
              Submit
            </span>
            <span aria-hidden="true">
              <svg class="svg-icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
                <path d="M15.5 14h-.8l-.28-.27A6.47 6.47 0 0 0 16 9.5a6.5 6.5 0 1 0-13 0A6.5 6.5 0 0 0 9.5 16a6.47 6.47 0 0 0 4.23-1.57l.27.28v.8l5 5 1.5-1.5-5-5zm-6 0C7 14 5 12 5 9.5S7 5 9.5 5 14 7 14 9.5 12 14 9.5 14z"></path>
              </svg>
            </span>
          </button>
        </div>
        <ul id="ontario-search-input-field-suggestion-list" class="ontario-search-autocomplete__suggestion-list ontario-search-autocomplete__suggestion-list--open" role="listbox" aria-labelledby="ontario-search-input-field" aria-hidden="false">
          <slot name="suggestions"></slot>
        </ul>
        <div id="ontario-search-input-field-aria-live-region" class="ontario-search__visually-hidden" aria-live="polite"></div>
      </div>
    </form>
  </mock:shadow-root>
  <ontario-search-result-item slot="suggestions" label="Toronto" value="Toronto" role="option" tabindex="-1" aria-selected="false" aria-disabled="false" class="ontario-search-result-item hydrated ontario-search-autocomplete__slot-option" data-value="Toronto" aria-hidden="false" id="ontario-search-input-field-suggestion-list-option-0" data-ontario-suggestion-index="0">
    <mock:shadow-root>
      <div class="ontario-search-result-item__content">
        <slot></slot>
        <div class="ontario-search-result-item__text">
          <span class="ontario-search-result-item__label">
            <span class="ontario-search-result-item__completion">
              Toronto
            </span>
          </span>
        </div>
      </div>
    </mock:shadow-root>
  </ontario-search-result-item>
</ontario-search-box>
`;

exports[`ontario-search-box > should render a default search box element 1`] = `
<ontario-search-box caption="Search" class="hydrated">
  <mock:shadow-root>
    <form name="searchForm" id="ontario-search-form-container" class="ontario-search__container ontario-columns ontario-small-10 ontario-medium-offset-3 ontario-medium-6 ontario-large-offset-0 ontario-large-6" novalidate>
      <label htmlfor="ontario-search-input-field" class="ontario-label">
        Search
      </label>
      <div class="ontario-search__input-suggestion-container">
        <div class="ontario-search__input-container">
          <input autocomplete="off" class="ontario-search__input ontario-input" id="ontario-search-input-field" name="search" type="search" value required aria-autocomplete="none">
          <input class="ontario-search__reset" id="ontario-search-reset" type="reset" value aria-label="Clear field">
          <button class="ontario-search__submit" type="submit" id="ontario-search-box__submit">
            <span class="ontario-show-for-sr">
              Submit
            </span>
            <span aria-hidden="true">
              <svg class="svg-icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
                <path d="M15.5 14h-.8l-.28-.27A6.47 6.47 0 0 0 16 9.5a6.5 6.5 0 1 0-13 0A6.5 6.5 0 0 0 9.5 16a6.47 6.47 0 0 0 4.23-1.57l.27.28v.8l5 5 1.5-1.5-5-5zm-6 0C7 14 5 12 5 9.5S7 5 9.5 5 14 7 14 9.5 12 14 9.5 14z"></path>
              </svg>
            </span>
          </button>
        </div>
        <ul id="ontario-search-input-field-suggestion-list" class="ontario-search-autocomplete__suggestion-list" role="listbox" aria-labelledby="ontario-search-input-field" aria-hidden="true">
          <slot name="suggestions"></slot>
        </ul>
        <div id="ontario-search-input-field-aria-live-region" class="ontario-search__visually-hidden" aria-live="polite"></div>
      </div>
    </form>
  </mock:shadow-root>
</ontario-search-box>
`;
